--- a/package.json
+++ b/package.json
@@ -12,12 +12,23 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@fontsource-variable/inter": "^5.0.16",
+		"@fontsource/noto-color-emoji": "^5.0.21",
+		"@melt-ui/pp": "^0.3.0",
+		"@melt-ui/svelte": "^0.71.2",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "8.56.0",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
+		"@unocss/extractor-svelte": "^0.58.5",
+		"@unocss/reset": "^0.58.5",
+		"@unocss/transformer-directives": "^0.58.5",
+		"@unocss/transformer-variant-group": "^0.58.5",
+		"barrelsby": "^2.8.1",
+		"class-variance-authority": "^0.7.0",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
@@ -25,9 +36,13 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"sveltekit-superforms": "^1.13.4",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"unocss": "^0.58.5",
+		"unocss-preset-radix": "^2.5.5",
+		"vite": "^5.0.3",
+		"zod": "^3.22.4"
 	},
 	"type": "module"
 }
