--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@bscotch/utility": "^7.2.0",
 		"@fontsource-variable/inter": "^5.0.16",
 		"@fontsource/noto-color-emoji": "^5.0.21",
 		"@melt-ui/pp": "^0.3.0",
 		"@melt-ui/svelte": "^0.71.2",
+		"@mobily/ts-belt": "4.0.0-rc.5",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.0.0",
@@ -27,15 +29,20 @@
 		"@unocss/reset": "^0.58.5",
 		"@unocss/transformer-directives": "^0.58.5",
 		"@unocss/transformer-variant-group": "^0.58.5",
-		"barrelsby": "^2.8.1",
+		"bits-ui": "^0.17.0",
 		"class-variance-authority": "^0.7.0",
+		"date-fns": "^3.3.1",
+		"dexie": "4.0.1-beta.7",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"lucide-svelte": "^0.323.0",
+		"nanoid": "^5.0.5",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-persisted-store": "^0.9.0",
 		"sveltekit-superforms": "^1.13.4",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -44,5 +51,8 @@
 		"vite": "^5.0.3",
 		"zod": "^3.22.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@internationalized/date": "^3.5.1"
+	}
 }
