remove unneeded libraries

--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
 		"@unocss/reset": "^0.58.5",
 		"@unocss/transformer-directives": "^0.58.5",
 		"@unocss/transformer-variant-group": "^0.58.5",
-		"bits-ui": "^0.17.0",
 		"class-variance-authority": "^0.7.0",
 		"date-fns": "^3.3.1",
 		"dexie": "4.0.1-beta.7",
@@ -48,11 +47,7 @@
 		"typescript": "^5.0.0",
 		"unocss": "^0.58.5",
 		"unocss-preset-radix": "^2.5.5",
-		"vite": "^5.0.3",
-		"zod": "^3.22.4"
+		"vite": "^5.0.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"@internationalized/date": "^3.5.1"
-	}
+	"type": "module"
 }
